--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "todis",
   "version": "0.0.1",
   "private": true,
+  "license": "GPL-3.0",
   "homepage": "http://hakt0r.github.io/Todis-SinglePageApp",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
